tdf#140757 sw ChangesInMargin: fix crash on Undo of Accept All

Change-Id: Ia1e0a58b0843f34c0f5042fdc147c4035e868255